--- a/day_1_to_10/days_03.ipynb
+++ b/day_1_to_10/days_03.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -55,38 +55,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'pomme': 'rouge', 'banane': 'jaune', 'orange': 'orange', 'kiwi': 'vert'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "fruits[\"kiwi\"]=\"vert\"\n",
+    "print(fruits)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "jaune\n"
+     ]
+    }
+   ],
+   "source": [
+    "couleur_banane= fruits['banane']\n",
+    "print(couleur_banane)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'pomme': 'vert', 'banane': 'jaune', 'orange': 'orange', 'kiwi': 'vert'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "fruits[\"pomme\"]=\"vert\"\n",
+    "print(fruits)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'pomme': 'vert', 'orange': 'orange', 'kiwi': 'vert'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "del fruits[\"banane\".k   ]\n",
+    "print(fruits)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_keys(['pomme', 'orange', 'kiwi'])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(fruits.keys())"
+   ]
   }
  ],
  "metadata": {
