--- a/day_1_to_10/days_05.ipynb
+++ b/day_1_to_10/days_05.ipynb
@@ -26,7 +26,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "input=int(list())"
+    "inpu=int(list()) \n",
+    "print(inpu)"
    ]
   }
  ],
