Mise à jour du notebook pour inclure des calculs de somme et de moyenne, ainsi que des filtres pour les nombres supérieurs à la moyenne et pairs avec utilisation des listes

--- a/day_1_to_10/days_05.ipynb
+++ b/day_1_to_10/days_05.ipynb
@@ -22,13 +22,54 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "78,30,32,2,93,63,5\n",
+      "['78', '30', '32', '2', '93', '63', '5']\n",
+      "[78, 30, 32, 2, 93, 63, 5]\n",
+      "la somme de la liste est 303\n",
+      "la moyenne de la liste est 43.285714285714285\n",
+      "[63] sont superieur a la moyenne\n",
+      "[2] sont pair\n",
+      "[78, 30, 32, 2, 93, 63, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "nombres = input(\"saisie les nombres:\")\n",
+    "print(nombres)\n",
+    "nombres = nombres.split(',')\n",
+    "print(nombres)\n",
+    "nombres = [int(x) for x in nombres]\n",
+    "print(nombres)\n",
+    "somme = sum(nombres)\n",
+    "print(f\"la somme de la liste est {somme}\")\n",
+    "moyenne = somme / len(nombres)\n",
+    "print(f\"la moyenne de la liste est {moyenne}\")\n",
+    "for i in range(len(nombres)):\n",
+    "    if nombres[i] >  moyenne:\n",
+    "        nombres_superieur = []\n",
+    "        nombres_superieur.append(nombres[i])\n",
+    "print(f\"{nombres_superieur} sont superieur a la moyenne\")\n",
+    "for j in range(len(nombres)):\n",
+    "    if nombres[j]%2==0:\n",
+    "        nombres_pair = []\n",
+    "        nombres_pair.append(nombres[j])\n",
+    "print(f\"{nombres_pair} sont pair\")\n",
+    "print(nombres)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "inpu=int(list()) \n",
-    "print(inpu)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -38,8 +79,16 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.12.4"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
