--- a/day_1_to_10/exerci.ipynb
+++ b/day_1_to_10/exerci.ipynb
@@ -25,11 +25,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1]\n",
+      "[1, 1]\n",
+      "[1, 2, 1]\n",
+      "[1, 3, 3, 1]\n",
+      "[1, 4, 6, 4, 1]\n",
+      "[1, 5, 10, 10, 5, 1]\n",
+      "[1, 6, 15, 20, 15, 6, 1]\n",
+      "[1, 7, 21, 35, 35, 21, 7, 1]\n",
+      "[1, 8, 28, 56, 70, 56, 28, 8, 1]\n",
+      "[1, 9, 36, 84, 126, 126, 84, 36, 9, 1]\n"
+     ]
+    }
+   ],
    "source": [
-    "# le triangke de pascal"
+    "# le triangle de Pascal\n",
+    "def pascal_triangle(nombre):\n",
+    "    triangle = [[1]]\n",
+    "    for i in range(1, nombre):\n",
+    "        ajout = [1]\n",
+    "        for j in range(1, len(triangle[-1])):\n",
+    "            ajout.append(triangle[-1][j-1] + triangle[-1][j])\n",
+    "        ajout.append(1)\n",
+    "        triangle.append(ajout)\n",
+    "    return triangle\n",
+    "\n",
+    "nombre = int(input(\"Entrer le nombre de lignes du triangle de Pascal: \"))\n",
+    "for ajout in pascal_triangle(nombre):\n",
+    "    print(ajout)\n",
+    "\n"
    ]
   }
  ],
