--- a/day_1_to_10/days_07.ipynb
+++ b/day_1_to_10/days_07.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1, 2, 3, 5, 8, 13, 21, 34, 55, 89]\n"
+      "[1, 2, 3, 5, 8, 13, 21, 34, 55, 89, 144, 233, 377, 610, 987, 1597, 2584, 4181]\n"
      ]
     }
    ],
@@ -20,7 +20,8 @@
     "    for i in range(2,n):\n",
     "        nobre_fibonacci.append(nobre_fibonacci[-1]+nobre_fibonacci[-2])\n",
     "    return nobre_fibonacci\n",
-    "print(fubonacci(10))"
+    "n= int(input(\"entre le nombre de nombre que vous voulez pour la suite de fonbonacci:\"))\n",
+    "print(fubonacci(n))\n"
    ]
   },
   {
