--- a/day_1_to_10/days_07.ipynb
+++ b/day_1_to_10/days_07.ipynb
@@ -66,10 +66,40 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "# definir une fonction divisible\n",
+    "def divisible(n):\n",
+    "    divisible = []\n",
+    "    if(n<=100):\n",
+    "        for i in range(1,n+1):\n",
+    "           i= 100/n\n",
+    "           return divisible.append(i)\n",
+    "    else:\n",
+    "        return \"est superieur a 100\"\n",
+    "print(divisible(10))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def divisible(n):\n",
+    "    return {n*1 for i in range(100 // n+1)}\n",
+    "print(divisible(10))"
+   ]
   }
  ],
  "metadata": {
