--- a/day_1_to_10/days_08.ipynb
+++ b/day_1_to_10/days_08.ipynb
@@ -191,6 +191,31 @@
     "ordonne_str('python')\n",
     "> 'hnopty'"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'hnopty'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def ordonne_str(phrase):\n",
+    "    phrase = list(phrase)\n",
+    "    caractres = sorted(phrase)\n",
+    "    phrase_ordonne = \"\".join(caractres)\n",
+    "    return phrase_ordonne\n",
+    "ordonne_str(\"python\")\n"
+   ]
   }
  ],
  "metadata": {
