suite de ma formation et pratiquement la fin de la premier partie

--- a/day_1_to_10/days_09.ipynb
+++ b/day_1_to_10/days_09.ipynb
@@ -95,16 +95,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'deoprydeopry'"
+       "(5, 8)"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -116,15 +116,87 @@
     "        return phrase\n",
     "    elif isinstance(phrase, list):\n",
     "        phrase = list(phrase)\n",
-    "        fi = phrase[0]+phrase[-1]\n",
-    "        fi = \"\".join(fi)\n",
+    "        fi = [phrase[0],phrase[-1]]\n",
     "        return fi\n",
     "    elif isinstance(phrase, tuple):\n",
-    "        phrase = (phrase(0), phrase(-1))\n",
+    "        phrase = (phrase[0], phrase[-1])\n",
     "        return phrase\n",
     "    else:\n",
     "        return \"Erreur\"\n",
-    "debut_fin(['deopry'])"
+    "    \n",
+    "phrase = (5,2,6,9,8)\n",
+    "debut_fin(phrase)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Exo 9 : Dis moi ton index, je te dirai qui tu es\n",
+    "Dans cet exercice, vous allez écrire une fonction qui prend entrée, une liste de nombre et retourne une liste contenant:\n",
+    "\n",
+    "La somme des éléments d'index pairs\n",
+    "La somme des éléments d'index impairs\n",
+    "somme_pair_impair([10,20,30,40,50,60])\n",
+    "> [90, 120]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def somme_pair_impair(liste):\n",
+    "    somme_paire = sum(liste[i] for i in range(len(liste)) if i % 2 == 0)\n",
+    "    somme_impaire = sum(liste[i] for i in range(len(liste)) if i % 2 != 0)\n",
+    "    return [somme_paire, somme_impaire]\n",
+    "\n",
+    "liste = [10,20,30,40,50,60]\n",
+    "somme_pair_impair(liste)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Exo 10 : Mot ayant le plus de lettre répétée\n",
+    "Dans cet exercice, tu es appélé à écrire une fonction mot_lettre_repetee qui prend en entrée, une liste de mots. Pour chaque mot, trouve la lettre qui se répète le plus. La focntion retourne alors le mot ayant une lettre qui se répète le plus de fois (dans ce même mot, bien sûr).\n",
+    "\n",
+    "mot_lettre_repetee([\"On\", \"a\", \"effectuee\", \"plusieurs\", \"tests\", \"elementaire\", \"ce\", \"matin\"])\n",
+    "> \"elementaire\"\n",
+    "En cas d'égalité, n'importe quelle option vraie est juste."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "expected an indented block after 'if' statement on line 10 (655898286.py, line 12)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[49], line 12\u001b[0;36m\u001b[0m\n\u001b[0;31m    print(resultat)\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block after 'if' statement on line 10\n"
+     ]
+    }
+   ],
+   "source": [
+    "def mot_lettre_repetee(mot):\n",
+    "    for lettre in mot:\n",
+    "        if mot.count(lettre) > 1:\n",
+    "            return mot\n",
+    "    return None\n",
+    "\n",
+    "mots = [\"On\", \"a\", \"effectuee\", \"plusieurs\", \"tests\", \"elementaire\", \"ce\", \"matin\"]\n",
+    "resultat = [mot for mot in mots if mot_lettre_repetee(mot) ]\n",
+    "resultat = sorted(resultat)\n",
+    "if resultat == []:\n",
+    "    \n",
+    "print(resultat)\n",
+    "\n",
+    "# a revoire "
    ]
   }
  ],
