almost the end of 10 days

--- a/day_1_to_10/days_09.ipynb
+++ b/day_1_to_10/days_09.ipynb
@@ -198,6 +198,67 @@
     "\n",
     "# a revoire "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cet programme est un calculateur\n",
+      "Choix invalide. Veuillez entrer -, +, *, ou /\n",
+      "La différence de 5 et 6 est -1\n",
+      "Au revoir !\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"cet programme est un calculateur\")\n",
+    "continuer_arrete = input(\"Voulez-vous continuer ? (o/n): \").lower()\n",
+    "while continuer_arrete != \"N\":\n",
+    "    nbre1 = int(input(\"Entrez un nombre: \"))\n",
+    "    nbre2 = int(input(\"Entrez un deuxième nombre: \"))\n",
+    "\n",
+    "    print(\"Choix invalide. Veuillez entrer -, +, *, ou /\")\n",
+    "    choix = input(\"Entrez votre choix: \")\n",
+    "    while choix not in [\"-\", \"+\", \"*\", \"/\"]:\n",
+    "        choix = input(\"Entrez votre choix: \")\n",
+    "\n",
+    "    match choix:\n",
+    "        case \"+\":\n",
+    "            print(\"La somme de\", nbre1, \"et\", nbre2, \"est\", nbre1 + nbre2)\n",
+    "            break\n",
+    "        case \"-\":\n",
+    "            print(\"La différence de\", nbre1, \"et\", nbre2, \"est\", nbre1 - nbre2)\n",
+    "            break\n",
+    "        case \"*\":\n",
+    "            print(\"La multiplication de\", nbre1, \"et\", nbre2, \"est\", nbre1 * nbre2)\n",
+    "            break\n",
+    "        case \"/\":\n",
+    "            if nbre2 != 0:\n",
+    "                print(\"La division de\", nbre1, \"et\", nbre2, \"est\", nbre1 / nbre2)\n",
+    "                break\n",
+    "            else:\n",
+    "                print(\"Erreur : Division par zéro\")\n",
+    "                break\n",
+    "        case _:\n",
+    "            print(\"Erreur\")\n",
+    "            break\n",
+    "print(\"Au revoir !\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\" \")"
+   ]
   }
  ],
  "metadata": {
